back colors border

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SCI FINAL</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>WHAT IS NATURE TO US</h1>
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+        recusandae quod. Ex nemo voluptates, at in modi aliquid, ea ratione
+        magni suscipit reprehenderit nisi ut atque quas ab, commodi dolor?
+      </p>
+    </section>
   </body>
 </html>
